--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.6",
   "description": "a modular account for starknet",
   "scripts": {
-    "artifacts:artifacts": "cp -R target/dev/smartr_CoreValidator.* target/dev/smartr_SimpleValidator.* target/dev/smartr_SmartrAccount.* target/dev/smartr_SessionKeyValidator.* artifacts/.",
+    "artifacts:artifacts": "cp -R target/dev/smartr_StarkValidator.* target/dev/smartr_SimpleValidator.* target/dev/smartr_SmartrAccount.* target/dev/smartr_SessionKeyValidator.* artifacts/.",
     "artifacts:bootstrap:compile": "node scripts/convert-typescript.js target/dev/smartr_BootstrapAccount.compiled_contract_class.json experiments/starknet-bootstrap-account/src/artifacts/BootstrapAccount-compiled.ts",
     "artifacts:bootstrap:contract": "node scripts/convert-typescript.js target/dev/smartr_BootstrapAccount.contract_class.json experiments/starknet-bootstrap-account/src/artifacts/BootstrapAccount-contract.ts",
     "artifacts:bootstrap": "npm run artifacts:bootstrap:compile && npm run artifacts:bootstrap:contract",
-    "artifacts:corevalidator:compile": "node scripts/convert-typescript.js target/dev/smartr_CoreValidator.compiled_contract_class.json sdks/account/src/artifacts/CoreValidator-compiled.ts",
-    "artifacts:corevalidator:contract": "node scripts/convert-typescript.js target/dev/smartr_CoreValidator.contract_class.json sdks/account/src/artifacts/CoreValidator-contract.ts",
-    "artifacts:corevalidator": "npm run artifacts:corevalidator:compile && npm run artifacts:corevalidator:contract",
+    "artifacts:starkvalidator:compile": "node scripts/convert-typescript.js target/dev/smartr_StarkValidator.compiled_contract_class.json sdks/account/src/artifacts/StarkValidator-compiled.ts",
+    "artifacts:starkvalidator:contract": "node scripts/convert-typescript.js target/dev/smartr_StarkValidator.contract_class.json sdks/account/src/artifacts/StarkValidator-contract.ts",
+    "artifacts:starkvalidator": "npm run artifacts:starkvalidator:compile && npm run artifacts:starkvalidator:contract",
     "artifacts:counter:compile": "node scripts/convert-typescript.js target/dev/smartr_Counter.compiled_contract_class.json sdks/__tests__/helpers/src/artifacts/Counter-compiled.ts",
     "artifacts:counter:contract": "node scripts/convert-typescript.js target/dev/smartr_Counter.contract_class.json sdks/__tests__/helpers/src/artifacts/Counter-contract.ts",
     "artifacts:counter": "npm run artifacts:counter:compile && npm run artifacts:counter:contract",
@@ -37,7 +37,7 @@
     "artifacts:tokenb:compile": "node scripts/convert-typescript.js target/dev/smartr_TokenB.compiled_contract_class.json sdks/__tests__/helpers/src/artifacts/TokenB-compiled.ts",
     "artifacts:tokenb:contract": "node scripts/convert-typescript.js target/dev/smartr_TokenB.contract_class.json sdks/__tests__/helpers/src/artifacts/TokenB-contract.ts",
     "artifacts:tokenb": "npm run artifacts:tokenb:compile && npm run artifacts:tokenb:contract",
-    "artifacts": "npm run artifacts:artifacts && npm run artifacts:bootstrap && npm run artifacts:corevalidator && npm run artifacts:counter && npm run artifacts:failedaccount && npm run artifacts:sessionkeyvalidator && npm run artifacts:simpleaccount && npm run artifacts:smartraccount && npm run artifacts:swaprouter && npm run artifacts:tokena && npm run artifacts:tokenb",
+    "artifacts": "npm run artifacts:artifacts && npm run artifacts:bootstrap && npm run artifacts:starkvalidator && npm run artifacts:counter && npm run artifacts:failedaccount && npm run artifacts:sessionkeyvalidator && npm run artifacts:simpleaccount && npm run artifacts:smartraccount && npm run artifacts:swaprouter && npm run artifacts:tokena && npm run artifacts:tokenb",
     "build": "tsc --build",
     "build:abi": "npm run build:abi -ws --if-present",
     "build:scarb": "scarb build",
