--- a/sdks/account/package.json
+++ b/sdks/account/package.json
@@ -5,9 +5,9 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build:abi:CoreValidator": "npx abi-wan-kanabi --input ../../target/dev/smartr_CoreValidator.contract_class.json --output ./src/abi/CoreValidator.ts",
+    "build:abi:StarkValidator": "npx abi-wan-kanabi --input ../../target/dev/smartr_StarkValidator.contract_class.json --output ./src/abi/StarkValidator.ts",
     "build:abi:SmartrAccount": "npx abi-wan-kanabi --input ../../target/dev/smartr_SmartrAccount.contract_class.json --output ./src/abi/SmartrAccount.ts",
-    "build:abi": "mkdir -p src/abi && npm run build:abi:SmartrAccount && npm run build:abi:CoreValidator",
+    "build:abi": "mkdir -p src/abi && npm run build:abi:SmartrAccount && npm run build:abi:StarkValidator",
     "build": "tsc --build",
     "registry": "npm publish --access=public",
     "doc": "typedoc && mkdir -p ../../docs/starknet-account && cp -R docs/modules.md docs/classes ./docs/interfaces ../../docs/starknet-account/"
