--- a/Scarb.toml
+++ b/Scarb.toml
@@ -1,8 +1,9 @@
 [package]
 name = "smartr"
-version = "0.1.0"
+version = "0.1.8"
 edition = "2023_11"
 experimental-features = ["negative_impls"]
+cairo-version = "2.6.3"
 
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 
