--- a/Scarb.toml
+++ b/Scarb.toml
@@ -12,6 +12,8 @@ openzeppelin = { git = "https://github.com/openzeppelin/cairo-contracts", tag = 
 snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.22.0" }
 starknet = "2.6.3"
 
+[lib]
+
 [[target.starknet-contract]]
 sierra = true
 casm = true
