--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.8",
   "description": "a modular account for starknet",
   "scripts": {
-    "artifacts:artifacts": "cp -R target/dev/smartr_StarkValidator.* target/dev/smartr_SimpleValidator.* target/dev/smartr_SmartrAccount.* target/dev/smartr_SessionKeyValidator.* artifacts/.",
+    "artifacts:artifacts": "cp -R target/dev/smartr_StarkValidator.* target/dev/smartr_SimpleValidator.* target/dev/smartr_SmartrAccount.* target/dev/smartr_SessionKeyValidator.* target/dev/smartr_EthValidator.* artifacts/.",
     "artifacts:bootstrap:compile": "node scripts/convert-typescript.js target/dev/smartr_BootstrapAccount.compiled_contract_class.json experiments/starknet-bootstrap-account/src/artifacts/BootstrapAccount-compiled.ts",
     "artifacts:bootstrap:contract": "node scripts/convert-typescript.js target/dev/smartr_BootstrapAccount.contract_class.json experiments/starknet-bootstrap-account/src/artifacts/BootstrapAccount-contract.ts",
     "artifacts:bootstrap": "npm run artifacts:bootstrap:compile && npm run artifacts:bootstrap:contract",
@@ -19,6 +19,9 @@
     "artifacts:sessionkeyvalidator:compile": "node scripts/convert-typescript.js target/dev/smartr_SessionKeyValidator.compiled_contract_class.json sdks/module-sessionkey/src/artifacts/SessionKeyValidator-compiled.ts",
     "artifacts:sessionkeyvalidator:contract": "node scripts/convert-typescript.js target/dev/smartr_SessionKeyValidator.contract_class.json sdks/module-sessionkey/src/artifacts/SessionKeyValidator-contract.ts",
     "artifacts:sessionkeyvalidator": "npm run artifacts:sessionkeyvalidator:compile && npm run artifacts:sessionkeyvalidator:contract",
+    "artifacts:ethvalidator:compile": "node scripts/convert-typescript.js target/dev/smartr_EthValidator.compiled_contract_class.json sdks/module-eth/src/artifacts/EthValidator-compiled.ts",
+    "artifacts:ethvalidator:contract": "node scripts/convert-typescript.js target/dev/smartr_EthValidator.contract_class.json sdks/module-eth/src/artifacts/EthValidator-contract.ts",
+    "artifacts:ethvalidator": "npm run artifacts:ethvalidator:compile && npm run artifacts:ethvalidator:contract",
     "artifacts:simpleaccount:compile": "node scripts/convert-typescript.js target/dev/smartr_SimpleAccount.compiled_contract_class.json sdks/__tests__/helpers/src/artifacts/SimpleAccount-compiled.ts",
     "artifacts:simpleaccount:contract": "node scripts/convert-typescript.js target/dev/smartr_SimpleAccount.contract_class.json sdks/__tests__/helpers/src/artifacts/SimpleAccount-contract.ts",
     "artifacts:simpleaccount": "npm run artifacts:simpleaccount:compile && npm run artifacts:simpleaccount:contract",
@@ -37,7 +40,7 @@
     "artifacts:tokenb:compile": "node scripts/convert-typescript.js target/dev/smartr_TokenB.compiled_contract_class.json sdks/__tests__/helpers/src/artifacts/TokenB-compiled.ts",
     "artifacts:tokenb:contract": "node scripts/convert-typescript.js target/dev/smartr_TokenB.contract_class.json sdks/__tests__/helpers/src/artifacts/TokenB-contract.ts",
     "artifacts:tokenb": "npm run artifacts:tokenb:compile && npm run artifacts:tokenb:contract",
-    "artifacts": "npm run artifacts:artifacts && npm run artifacts:bootstrap && npm run artifacts:starkvalidator && npm run artifacts:counter && npm run artifacts:failedaccount && npm run artifacts:sessionkeyvalidator && npm run artifacts:simpleaccount && npm run artifacts:smartraccount && npm run artifacts:swaprouter && npm run artifacts:tokena && npm run artifacts:tokenb",
+    "artifacts": "npm run artifacts:artifacts && npm run artifacts:bootstrap && npm run artifacts:starkvalidator && npm run artifacts:counter && npm run artifacts:failedaccount && npm run artifacts:ethvalidator && npm run artifacts:sessionkeyvalidator && npm run artifacts:simpleaccount && npm run artifacts:smartraccount && npm run artifacts:swaprouter && npm run artifacts:tokena && npm run artifacts:tokenb",
     "build": "tsc --build",
     "build:abi": "npm run build:abi -ws --if-present",
     "build:scarb": "scarb build",
@@ -56,8 +59,10 @@
     "experiments/starknet-bootstrap-account",
     "sdks/__tests__/account",
     "sdks/__tests__/helpers",
+    "sdks/__tests__/module-eth",
     "sdks/__tests__/module-sessionkey",
     "sdks/account",
+    "sdks/module-eth",
     "sdks/module-sessionkey"
   ],
   "devDependencies": {
