--- a/sdks/module-eth/package.json
+++ b/sdks/module-eth/package.json
@@ -15,5 +15,8 @@
     "starknet": "6.8.0"
   },
   "author": "0xknwn",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "ethereum-cryptography": "^2.1.3"
+  }
 }
