--- a/.github/workflows/tests-module.yml
+++ b/.github/workflows/tests-module.yml
@@ -1,4 +1,4 @@
-name: tests module-eth
+name: tests module
 on:
   pull_request:
     branches:
@@ -15,4 +15,4 @@ jobs:
   test:
     uses: ./.github/workflows/_sdks_jest.yml
     with:
-      workspace: "tests-module-eth"
+      workspace: "tests-module"
