--- a/Scarb.toml
+++ b/Scarb.toml
@@ -8,7 +8,7 @@ cairo-version = "2.6.3"
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 
 [dependencies]
-openzeppelin = { git = "https://github.com/openzeppelin/cairo-contracts", tag = "v0.12.0" }
+openzeppelin = { git = "https://github.com/0xknwn/cairo-contracts", branch = "feature/add-secp256r1-support" }
 snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.22.0" }
 starknet = "2.6.3"
 
