--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.10",
   "description": "a modular account for starknet",
   "scripts": {
-    "artifacts:artifacts": "cp -R target/dev/smartr_StarkValidator.* target/dev/smartr_SimpleValidator.* target/dev/smartr_MultisigValidator.* target/dev/smartr_SmartrAccount.* target/dev/smartr_SessionKeyValidator.* target/dev/smartr_EthValidator.* target/dev/smartr_P256Validator.* artifacts/.",
+    "artifacts:artifacts": "cp -R target/dev/smartr_StarkValidator.* target/dev/smartr_GuardedValidator.*  target/dev/smartr_SimpleValidator.* target/dev/smartr_MultisigValidator.* target/dev/smartr_SmartrAccount.* target/dev/smartr_SessionKeyValidator.* target/dev/smartr_EthValidator.* target/dev/smartr_P256Validator.* artifacts/.",
     "artifacts:bootstrap:compile": "node scripts/convert-typescript.js target/dev/smartr_BootstrapAccount.compiled_contract_class.json experiments/starknet-bootstrap-account/src/artifacts/BootstrapAccount-compiled.ts",
     "artifacts:bootstrap:contract": "node scripts/convert-typescript.js target/dev/smartr_BootstrapAccount.contract_class.json experiments/starknet-bootstrap-account/src/artifacts/BootstrapAccount-contract.ts",
     "artifacts:bootstrap": "npm run artifacts:bootstrap:compile && npm run artifacts:bootstrap:contract",
@@ -16,6 +16,9 @@
     "artifacts:failedaccount:compile": "node scripts/convert-typescript.js target/dev/smartr_FailedAccount.compiled_contract_class.json experiments/starknet-failed-account/src/artifacts/FailedAccount-compiled.ts",
     "artifacts:failedaccount:contract": "node scripts/convert-typescript.js target/dev/smartr_FailedAccount.contract_class.json experiments/starknet-failed-account/src/artifacts/FailedAccount-contract.ts",
     "artifacts:failedaccount": "npm run artifacts:failedaccount:compile && npm run artifacts:failedaccount:contract",
+    "artifacts:guardedvalidator:compile": "node scripts/convert-typescript.js target/dev/smartr_GuardedValidator.compiled_contract_class.json sdks/module/src/artifacts/GuardedValidator-compiled.ts",
+    "artifacts:guardedvalidator:contract": "node scripts/convert-typescript.js target/dev/smartr_GuardedValidator.contract_class.json sdks/module/src/artifacts/GuardedValidator-contract.ts",
+    "artifacts:guardedvalidator": "npm run artifacts:guardedvalidator:compile && npm run artifacts:guardedvalidator:contract",
     "artifacts:multisigvalidator:compile": "node scripts/convert-typescript.js target/dev/smartr_MultisigValidator.compiled_contract_class.json sdks/module/src/artifacts/MultisigValidator-compiled.ts",
     "artifacts:multisigvalidator:contract": "node scripts/convert-typescript.js target/dev/smartr_MultisigValidator.contract_class.json sdks/module/src/artifacts/MultisigValidator-contract.ts",
     "artifacts:multisigvalidator": "npm run artifacts:multisigvalidator:compile && npm run artifacts:multisigvalidator:contract",
@@ -46,7 +49,7 @@
     "artifacts:tokenb:compile": "node scripts/convert-typescript.js target/dev/smartr_TokenB.compiled_contract_class.json sdks/__tests__/helpers/src/artifacts/TokenB-compiled.ts",
     "artifacts:tokenb:contract": "node scripts/convert-typescript.js target/dev/smartr_TokenB.contract_class.json sdks/__tests__/helpers/src/artifacts/TokenB-contract.ts",
     "artifacts:tokenb": "npm run artifacts:tokenb:compile && npm run artifacts:tokenb:contract",
-    "artifacts": "npm run artifacts:artifacts && npm run artifacts:bootstrap && npm run artifacts:multisigvalidator && npm run artifacts:starkvalidator && npm run artifacts:counter && npm run artifacts:failedaccount && npm run artifacts:ethvalidator && npm run artifacts:p256validator && npm run artifacts:sessionkeyvalidator && npm run artifacts:simpleaccount && npm run artifacts:smartraccount && npm run artifacts:swaprouter && npm run artifacts:tokena && npm run artifacts:tokenb",
+    "artifacts": "npm run artifacts:artifacts && npm run artifacts:bootstrap && npm run artifacts:multisigvalidator && npm run artifacts:guardedvalidator && npm run artifacts:starkvalidator && npm run artifacts:counter && npm run artifacts:failedaccount && npm run artifacts:ethvalidator && npm run artifacts:p256validator && npm run artifacts:sessionkeyvalidator && npm run artifacts:simpleaccount && npm run artifacts:smartraccount && npm run artifacts:swaprouter && npm run artifacts:tokena && npm run artifacts:tokenb",
     "build": "tsc --build",
     "build:abi": "npm run build:abi -ws --if-present",
     "build:scarb": "scarb build",
